Bug 505028 - lots of “Page flip failed” warnings in journal when mpv plays video fullscreen
Summary: lots of “Page flip failed” warnings in journal when mpv plays video fullscreen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 6.3.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-30 18:13 UTC by Flupp
Modified: 2025-06-02 13:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Flupp 2025-05-30 18:13:29 UTC
When playing a video fullscreen using mpv, a lot instances of the following warning appear in the journal:

> kwin_wayland[1182]: kwin_wayland_drm: Page flip failed: Invalid argument

The frequency of warnings correlates with the video frame rate. (This can easily be observed by changing the playback speed using {, [, ], or }.) The maximum warning frequency seems to be the refresh rate of the monitor where the video is shown. When playing fullscreen videos on several monitors, the warning frequencies add up. In the worst case, I get 135 warnings per second when playing a video fullscreen on a 60Hz monitor in parallel to a video fullscreen on a 75Hz monitor. (“sort | uniq -c” helps determining the warning frequency.)

Besides the warnings I do not notice any problems.

The problem does not occur when not in fullscreen mode. Also, I cannot cannot reproduce the problem with VLC, MPlayer and Dragon Player.


SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.7-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-4790 CPU @ 3.60GHz
Memory: 23.4 GiB of RAM
Graphics Processor: VERDE
Comment 1 Bug Janitor Service 2025-06-02 12:14:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7709
Comment 2 Zamundaaa 2025-06-02 12:41:30 UTC
Git commit f061994d57e2b0cd2d2dd8ddccdd8a349624d4c4 by Xaver Hugl.
Committed on 02/06/2025 at 12:14.
Pushed by zamundaaa into branch 'master'.

backends/drm: reduce severity of pageflip failure logging

It can happen with attempted direct scanout

M  +1    -1    src/backends/drm/drm_pipeline_legacy.cpp

https://invent.kde.org/plasma/kwin/-/commit/f061994d57e2b0cd2d2dd8ddccdd8a349624d4c4
Comment 3 Zamundaaa 2025-06-02 13:14:53 UTC
Git commit 27d28c9cf3070de9b3102bf4d7dd93cf9d9ebf38 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 02/06/2025 at 12:46.
Pushed by zamundaaa into branch 'Plasma/6.3'.

backends/drm: reduce severity of pageflip failure logging

It can happen with attempted direct scanout


(cherry picked from commit f061994d57e2b0cd2d2dd8ddccdd8a349624d4c4)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +1    -1    src/backends/drm/drm_pipeline_legacy.cpp

https://invent.kde.org/plasma/kwin/-/commit/27d28c9cf3070de9b3102bf4d7dd93cf9d9ebf38
Comment 4 Zamundaaa 2025-06-02 13:30:36 UTC
Git commit fe14ca9ef914e2946f40335806051ba2ea472806 by Xaver Hugl, on behalf of Xaver Hugl.
Committed on 02/06/2025 at 12:46.
Pushed by zamundaaa into branch 'Plasma/6.4'.

backends/drm: reduce severity of pageflip failure logging

It can happen with attempted direct scanout


(cherry picked from commit f061994d57e2b0cd2d2dd8ddccdd8a349624d4c4)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +1    -1    src/backends/drm/drm_pipeline_legacy.cpp

https://invent.kde.org/plasma/kwin/-/commit/fe14ca9ef914e2946f40335806051ba2ea472806