backends/drm: reduce severity of pageflip failure logging

It can happen with attempted direct scanout

BUG: 505028


(cherry picked from commit f061994d57e2b0cd2d2dd8ddccdd8a349624d4c4)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>